chore: more secure list access